Implement logic and layout into activity

--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -45,6 +45,7 @@
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:adjustViewBounds="true"
+            android:backgroundTintMode="add"
             android:scaleType="fitCenter"/>
 
         <ImageButton
@@ -55,6 +56,7 @@
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:adjustViewBounds="true"
+            android:backgroundTintMode="add"
             android:scaleType="fitCenter"/>
 
         <ImageButton
@@ -64,6 +66,7 @@
             android:src="@drawable/scissors"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
+            android:backgroundTintMode="add"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"/>
 
